# kura

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/kotlin/com/kura/buffer/: Buffer.kt  BufferAbortException.kt  BufferManager.kt
app/src/main/kotlin/com/kura/file/: BlockId.kt  FileManager.kt  Page.kt
app/src/main/kotlin/com/kura/index/: Index.kt
app/src/main/kotlin/com/kura/jdbc/: ConnectionAdapter.kt  DriverAdapter.kt  ResultSetAdapter.kt  ResultSetMetaDataAdapter.kt  StatementAdapter.kt
app/src/main/kotlin/com/kura/log/: LogIterator.kt  LogManager.kt
app/src/main/kotlin/com/kura/materialize/: AggregationFn.kt  CountFn.kt  GroupByPlan.kt  GroupByScan.kt  GroupValue.kt  MaterializePlan.kt  MaxFn.kt  MergeJoinPlan.kt  MergeJoinScan.kt  RecordComparator.kt  (+3 more)
app/src/main/kotlin/sample/kura_client/: KuraSQLClient.kt
app/src/main/kotlin/sample/sample_sql/: SampleSQL.kt
file/: block_id.py  file_manager.py  page.py
internal/buffer/: buffer.go  buffer_manager.go  buffer_manager_test.go  buffer_test.go
internal/file/: file_manager.go  file_test.go  page.go
internal/log/: log_iterator.go  log_test.go
internal/server/: server.go
old/: .gitignore  go.mod
old/.github/workflows/: ci.yml
old/internal/buffer/: buffer_test.go
old/internal/file/: block_id.go  block_id_test.go  page_test.go
old/internal/log/: log_manager.go
old/internal/server/: server.go
src/kura/: main.py
src/kura/server/: server.py
tests/: test_main.py
tests/file/: test_main.py
(+167 files in other folders)
