[project]
name = "kura"
version = "0.1.0"
description = "A toy RDBMS implemented in Python using Codon"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
]
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kura"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
mypy_path = "src"
